<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/common_margin"
    tools:context=".ui.EditFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_margin"
        android:text="@string/add_marker_information"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="@dimen/space80x"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/latitude"
            android:layout_width="@dimen/space32x"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space2x"
            android:hint="@string/latitude">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="@dimen/space32x"
                android:layout_height="wrap_content"
                android:focusable="false"
                tools:text="50.3000" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/longitude"
            android:layout_width="@dimen/space32x"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space2x"
            android:hint="@string/longitude">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="@dimen/space32x"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:focusable="false"
                tools:text="50.8888888" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description"
        android:layout_width="@dimen/space80x"
        android:layout_height="wrap_content"
        android:hint="@string/description">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/space2x"
            tools:text="description" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create" />

</LinearLayout>